fixed the header img from being too big on FireFox. had to install the moz- prefix to the css transform: scale function.

--- a/src/index.css
+++ b/src/index.css
@@ -25,6 +25,7 @@
   bottom: 0;
   left: 0;
   transform: translateZ(-1px) scale(1.5);
+  /*Firefox*/
+  -moz-transform: scale(1);
   z-index: -1;
-  /* background-size: 50%; */
 }
